[build-system]
requires = ["poetry>=1.0.10", "cython>=0.29", "wheel>=0.35"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "timeserio"
version = "0.11.0"
description="Machine Learning and Forecasting tools"
authors = ["Octopus Energy <nerds@octopus.energy>"]
homepage = "https://github.com/octoenergy/timeserio"
license = "MIT"
keywords = ["tensorflow", "keras", "machine learning", "deep learning"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = ">=0.24,<1.0"
numpy = "^1.18"
pandas = "^1.0"
holidays = "^0.10.5"
cloudpickle = "^1.6.0"
fsspec = "^0.8.7"
s3fs = "^0.4"


[tool.poetry.dev-dependencies]
codecov = "*"
dask = {version = "*", extras = ["dataframe", "distributed"]}
flake8 = "*"
glob2 = "*"
m2r = ">=0.2.1"
mccabe = "*"
moto = "<2"
mypy = "*"
nbsphinx = ">=0.4.2"
nbsphinx-link = ">=1.2.0"
pep8-naming = "*"
pyarrow = "^6.0"
pydocstyle = "*"
pytest = "<6,>=5.3"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "<2.0"
sphinx-autodoc-typehints = ">=1.6.0"
sphinx-rtd-theme = ">=0.4.3"
sphinxcontrib-apidoc = ">=0.3.0"
tensorflow = "~2.5.2"
tensorpandas = {git = "https://github.com/ig248/tensorpandas.git"}
twine = "*"
yapf = "^0.30"
isort = "^5.10.1"
